--- a/package.json
+++ b/package.json
@@ -25,38 +25,23 @@
     "prepare": "tsc"
   },
   "dependencies": {
-    "@leafac/css": "^0.0.1",
-    "@leafac/html": "^3.0.0",
     "@leafac/sqlite": "^1.1.2",
     "@leafac/sqlite-migration": "^1.0.3",
     "@small-tech/auto-encrypt": "^2.0.5",
     "crypto-random-string": "^3.3.1",
-    "express": "^4.17.1",
-    "fs-extra": "^9.1.0",
     "mailparser": "^3.1.0",
-    "smtp-server": "^3.8.0",
-    "tagged-template-noop": "^2.1.1"
+    "smtp-server": "^3.8.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/fs-extra": "^9.0.8",
-    "@types/jest": "^27.0.1",
     "@types/mailparser": "^3.0.2",
     "@types/node": "^14.14.33",
     "@types/nodemailer": "^6.4.0",
     "@types/smtp-server": "^3.5.6",
-    "caxa": "^1.0.0",
     "got": "^11.8.2",
-    "jest": "^27.1.0",
     "node-dev": "^7.0.0",
     "nodemailer": "^6.4.18",
     "prettier": "^2.2.1",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^9.1.1",
+    "ts-node": "10.8.1",
     "typescript": "^4.2.3"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "rootDir": "source"
   }
 }
